# 3d-game-engine-thin-matrix

./: CMakeLists.txt  README.md  main.cpp
assets/shaders/: fragment.glsl  terrainFragment.glsl  terrainVertex.glsl  vertex.glsl
src/controls/: Gamepad.cpp  Gamepad.h
src/entities/: Camera.cpp  Camera.h  Entity.cpp  Entity.h  Light.cpp  Light.h  Player.cpp  Player.h
src/models/: RawModel.cpp  RawModel.h  TexturedModel.cpp  TexturedModel.h
src/renderEngine/: DisplayManager.cpp  DisplayManager.h  EntityRenderer.cpp  EntityRenderer.h  Loader.cpp  Loader.h  MasterRenderer.cpp  MasterRenderer.h  OBJLoader.cpp  OBJLoader.h  Renderer.cpp  Renderer.h  TerrainRenderer.cpp  TerrainRenderer.h
src/shaders/: Shader.h  ShaderProgram.cpp  ShaderProgram.h  StaticShader.cpp  StaticShader.h  TerrainShader.cpp  TerrainShader.h
src/terrains/: Terrain.cpp  Terrain.h
src/textures/: ModelTexture.cpp  ModelTexture.h  TerrainTexture.cpp  TerrainTexture.h  TerrainTexturePack.cpp  TerrainTexturePack.h
src/toolbox/: Maths.cpp  Maths.h
